syntax = "proto3";

package service;
option java_multiple_files = true;
option java_package = "vn.com.hung.grpc.service";

message BalanceCheckRequest{
  int32 account_number = 1;
}

message AccountBalance{
  int32 account_number = 1;
  int32 balance = 2;
}

service BankService {
  rpc GetAccountBanlance(BalanceCheckRequest) returns (AccountBalance);
}
